# canister_app

./: .env  .gitignore  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vetkey_blog_post.md
backend/: Cargo.toml  build.rs  rust_lesson.md  service.did
backend/data/: adjectives.txt  nouns.txt
backend/src/: api.rs  lib.rs  main.rs  memory.rs
backend/src/api/: canister_management.rs  create_folder.rs  delete_file.rs  delete_item.rs  download_file.rs  get_alias_info.rs  get_group_by_alias.rs  get_request_groups.rs  get_requests.rs  get_users.rs  list_folder_contents.rs  move_item.rs  multi_request.rs  rename_file.rs  rename_item.rs  request_file.rs  share_file.rs  share_item.rs  template.rs  upload_file.rs  upload_file_atomic.rs  user_info.rs
backend/src/declarations/: mod.rs  vetkd_system_api.rs
backend/src/declarations/vetkd_system_api/: vetkd_system_api.did.d.ts
backend/src/vetkd/: mod.rs  vetkd_encrypted_key.rs  vetkd_public_key.rs
backend/src/vetkd/controller/: vetkd_encrypted_key.rs
frontend/: README.md  Redesign Specification.md  Solving VetKD File Sharing.md  components.json  hierarchical_file_system.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vetkey_refactor.md  vite.config.ts
frontend/scripts/: readCanisterIds.ts
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/declarations/internet_identity/: internet_identity.did.d.ts
src/declarations/nns-cycles-minting/: index.d.ts  index.js  nns-cycles-minting.did.d.ts  (+1 more)
vetkeys/: README.md
(+126 files in other folders)
